--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>로그인 페이지</h1>
 <hr/>
-<form>
+<form action="/login"method="POST">
     <input type="next"name="username"placeholder="Username"/> <br/>
     <input type="password"name="password"placeholder="Password"/> <br/>
     <button>로그인</button>
